# Kursovaya-4

./: README.md  main.py  pyproject.toml
data/: data_api.json
src/: from_api.py  function.py  menu.py  saver.py  vacancies.py
tests/: test.py
