[tool.poetry]
name = "kursovaya 4"
version = "0.1.0"
description = ""
authors = ["alexeylitvinov <alextwin1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
